# Astrologer-API

./: .dockerignore  .gitignore  Dockerfile  README_ru.md  pyproject.toml
app/config/: config.prod.toml
